--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="username_text">Username</string>
     <string name="password_text">Password</string>
     <string name="login_button_text">LOGIN</string>
+    <string name="title_activity_login">Login</string>
+    <string name="hello_world">Hello world!</string>
 </resources>
